# codeAssistant

./: .gitignore  README.md  SPEC.md  USAGE.md  fix_brief.txt  pyproject.toml  requirements_brief.txt
codeassistant/: cli.py
codeassistant/core/: config.py  cost.py  oa_client.py  prompts.py  session.py
codeassistant/modes/: api.py  azure_func.py  fabric.py  pipeline.py
